--- a/ui/package.json
+++ b/ui/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "^15.2.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
+    "typescript": "^5.0.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -33,6 +34,7 @@
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
+    "ajv": "^7.2.4",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -43,7 +45,6 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~4.9.5"
+    "tslint": "~6.1.0"
   }
 }
