--- a/ui/package.json
+++ b/ui/package.json
@@ -24,7 +24,6 @@
     "@angular/router": "^15.2.9",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "typescript": "^5.0.4",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
@@ -45,6 +44,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0"
+    "tslint": "~6.1.0",
+    "typescript": "^4.8.2"
   }
 }
